KAFKA-20182: Remove removeUnusedImports and upgrade spotless to 8.4.0
removeUnusedImports engines (google-java-format, cleanthat) can
non-deterministically throw InvocationTargetException under parallel
execution (see https://github.com/diffplug/spotless/issues/2850).
Unused imports are still enforced by checkstyle (UnusedImports +
RedundantImport).